feat: Rename project and update title to Painel PS Pelotas
Updates the project name in package.json and metadata.json to "painel-ps-pelotas" and "Painel PS Pelotas" respectively. Also, changes the page title in index.html and refactors the Header component for a more modern visual style. Enhancements to button styling and spacing are also included.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "planilha-de-leitos-do-p.s",
+  "name": "painel-ps-pelotas",
   "private": true,
   "version": "0.0.0",
   "type": "module",
